--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
   <script>
     // Firebase Config
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_STORAGE_BUCKET",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID",
-      measurementId: "YOUR_MEASUREMENT_ID"
-    };
+  apiKey: "AIzaSyBzUgShNYuzX8aD5wYFJC4gGarJjzCfvPs",
+  authDomain: "nevor-pay.firebaseapp.com",
+  projectId: "nevor-pay",
+  storageBucket: "nevor-pay.firebasestorage.app",
+  messagingSenderId: "131376993507",
+  appId: "1:131376993507:web:75a4a8f51e73434fece1d6",
+  measurementId: "G-V05X1ZMLFJ"
+};
 
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
