--- a/dashboard.html
+++ b/dashboard.html
@@ -12,23 +12,14 @@
 
   <script>
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_STORAGE_BUCKET",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID",
-      measurementId: "YOUR_MEASUREMENT_ID"
-    };
-
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-
-    auth.onAuthStateChanged(user => {
-      if (!user) {
-        window.location.href = "index.html";
-      }
-    });
+  apiKey: "AIzaSyBzUgShNYuzX8aD5wYFJC4gGarJjzCfvPs",
+  authDomain: "nevor-pay.firebaseapp.com",
+  projectId: "nevor-pay",
+  storageBucket: "nevor-pay.firebasestorage.app",
+  messagingSenderId: "131376993507",
+  appId: "1:131376993507:web:75a4a8f51e73434fece1d6",
+  measurementId: "G-V05X1ZMLFJ"
+};
 
     function logout() {
       auth.signOut().then(() => {
