--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
+
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>NEVOR PAY Wallet</title>
+  <title>NEVOR PAY Register</title>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 </head>
 <body>
-  <h1>NEVOR PAY Wallet</h1>
-  <div id="auth">
-    <h2>Login</h2>
-    <input type="email" id="email" placeholder="Email" required />
-    <input type="password" id="password" placeholder="Password" required />
-    <br />
-    <button onclick="login()">Login</button>
-    <button onclick="register()">Register</button>
-  </div>
+  <h2>Register to NEVOR PAY</h2>
+  <select id="country">
+    <option value="NG">🇳🇬 Nigeria (+234)</option>
+    <option value="CM">🇨🇲 Cameroon (+237)</option>
+  </select><br><br>
+
+  <input type="text" id="phone" placeholder="Phone Number (No +country code)" /><br>
+  <input type="email" id="email" placeholder="Email" /><br>
+  <input type="password" id="password" placeholder="Password" /><br>
+  <button onclick="register()">Register</button>
 
   <script>
-    // Firebase Config
     const firebaseConfig = {
   apiKey: "AIzaSyBzUgShNYuzX8aD5wYFJC4gGarJjzCfvPs",
   authDomain: "nevor-pay.firebaseapp.com",
@@ -30,25 +31,42 @@
   measurementId: "G-V05X1ZMLFJ"
 };
 
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
+d("password").value;
+      const phone = document.getElementById("phone").value.trim();
+      const country = document.getElementById("country").value;
 
-    function login() {
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
-      auth.signInWithEmailAndPassword(email, password)
-        .then(user => {
-          alert("Login successful!");
-          window.location.href = "dashboard.html";
-        })
-        .catch(error => alert(error.message));
-    }
+      let countryCode = "";
+      let accountNumber = "";
 
-    function register() {
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
+      if (country === "NG") {
+        countryCode = "+234";
+        if (phone.length !== 10) {
+          alert("Nigerian phone number must be 10 digits.");
+          return;
+        }
+        accountNumber = phone;
+      } else if (country === "CM") {
+        countryCode = "+237";
+        if (phone.length !== 9) {
+          alert("Cameroonian phone number must be 9 digits.");
+          return;
+        }
+        accountNumber = phone;
+      }
+
+      const fullPhone = countryCode + phone;
+
       auth.createUserWithEmailAndPassword(email, password)
         .then(user => {
+          return db.collection("wallets").doc(user.user.uid).set({
+            naira: 0,
+            fcfa: 0,
+            country: country === "NG" ? "Nigeria" : "Cameroon",
+            phone: fullPhone,
+            account_number: accountNumber
+          });
+        })
+        .then(() => {
           alert("Registration successful!");
           window.location.href = "dashboard.html";
         })
