--- a/agent.html
+++ b/agent.html
@@ -137,7 +137,7 @@
     }
 
     function logout() {
-      auth.signOut().then(() => window.location.href = "index.html");
+      auth.signOut().then(() => window.location.href = "login.html");
     }
   </script>
 </body>
