--- a/dashboard.html
+++ b/dashboard.html
@@ -232,7 +232,7 @@
     }
 
     function logout() {
-      auth.signOut().then(() => window.location.href = "index.html");
+      auth.signOut().then(() => window.location.href = "login.html");
     }
   </script>
 </body>
